# signia

./: .gitignore  README.md  pyproject.toml
src/signia/: __init__.py  _core.py
tests/: __init__.py  conftest.py  manual_tests.py  test_combine.py  test_fuse.py  test_fuse_examples.py  test_fuse_merge.py  test_merge.py  test_mirror.py  test_same.py
