[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signia"
version = "0.1.0"
description = "Function Signature Tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tim Marquart" }]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["signia"]

[tool.setuptools.package-data]
signia = ["py.typed"]
